# Process-Hollow

./: CMakeLists.txt  README.md
ProcessHollowing/: CMakeLists.txt
ProcessHollowing/Include/: ProcessHollowing.h  patch_ntdll.h
ProcessHollowing/src/: ProcessHollowing.cpp  patch_ntdll.cpp
